--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^11.2.0",
     "@nx/nest": "21.1.1",
+    "@scalar/nestjs-api-reference": "^0.5.14",
     "@tailwindcss/postcss": "^4.1.7",
     "appwrite": "^16.0.2",
     "axios": "^1.6.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "eslint-plugin-prettier": "^2.7.0",
     "express": "^4.21.2",
