update yarn config

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ['nodejs', 'yarn']
 
 [phases.install]
-cmds = ['yarn install --frozen-lockfile']
+cmds = ['yarn install']
 
 [phases.build]
 cmds = [
