--- a/apps/frontend/project.json
+++ b/apps/frontend/project.json
@@ -53,10 +53,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "buildTarget": "devswhorun-ui:build:production"
+          "buildTarget": "devswhorun-frontend:build:production"
         },
         "development": {
-          "buildTarget": "devswhorun-ui:build:development"
+          "buildTarget": "devswhorun-frontend:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -64,7 +64,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "buildTarget": "devswhorun-ui:build"
+        "buildTarget": "devswhorun-frontend:build"
       }
     },
     "lint": {
@@ -74,7 +74,7 @@
       "continuous": true,
       "executor": "@nx/web:file-server",
       "options": {
-        "buildTarget": "devswhorun-ui:build",
+        "buildTarget": "devswhorun-frontend:build",
         "port": 4200,
         "staticFilePath": "dist/apps/frontend/browser",
         "spa": true
