--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~19.2.0",
-    "@angular/compiler": "~19.2.0",
-    "@angular/core": "~19.2.0",
-    "@angular/forms": "~19.2.0",
-    "@angular/platform-browser": "~19.2.0",
-    "@angular/platform-browser-dynamic": "~19.2.0",
-    "@angular/platform-server": "~19.2.0",
-    "@angular/router": "~19.2.0",
-    "@angular/ssr": "~19.2.0",
+    "@angular/common": "20.2.4",
+    "@angular/compiler": "20.2.4",
+    "@angular/core": "20.2.4",
+    "@angular/forms": "20.2.4",
+    "@angular/platform-browser": "20.2.4",
+    "@angular/platform-browser-dynamic": "20.2.4",
+    "@angular/platform-server": "20.2.4",
+    "@angular/router": "20.2.4",
+    "@angular/ssr": "20.2.2",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^11.2.0",
-    "@nx/nest": "21.1.1",
+    "@nx/nest": "21.5.2",
     "@scalar/nestjs-api-reference": "^0.5.14",
     "@tailwindcss/postcss": "^4.1.7",
     "appwrite": "^16.0.2",
@@ -34,7 +34,7 @@
     "class-validator": "^0.14.2",
     "eslint-plugin-prettier": "^2.7.0",
     "express": "^4.21.2",
-    "ng-packagr": "19.2.2",
+    "ng-packagr": "20.2.0",
     "node-appwrite": "^18.0.0",
     "postcss": "^8.5.3",
     "reflect-metadata": "^0.1.13",
@@ -43,59 +43,60 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@analogjs/vite-plugin-angular": "~1.14.1",
-    "@analogjs/vitest-angular": "~1.14.1",
-    "@angular-devkit/build-angular": "~19.2.0",
-    "@angular-devkit/core": "~19.2.0",
-    "@angular-devkit/schematics": "~19.2.0",
-    "@angular/build": "~19.2.0",
-    "@angular/cli": "~19.2.0",
-    "@angular/compiler-cli": "~19.2.0",
-    "@angular/language-service": "~19.2.0",
+    "@analogjs/vite-plugin-angular": "1.19.4",
+    "@analogjs/vitest-angular": "1.19.4",
+    "@angular-devkit/build-angular": "20.2.2",
+    "@angular-devkit/core": "20.2.2",
+    "@angular-devkit/schematics": "20.2.2",
+    "@angular/build": "20.2.2",
+    "@angular/cli": "~20.0.0",
+    "@angular/compiler-cli": "20.2.4",
+    "@angular/language-service": "20.2.4",
     "@eslint/js": "^9.8.0",
-    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/schematics": "11.0.7",
     "@nestjs/testing": "^10.0.2",
-    "@nx/angular": "21.1.1",
-    "@nx/devkit": "21.1.1",
-    "@nx/eslint": "21.1.1",
-    "@nx/eslint-plugin": "21.1.1",
-    "@nx/jest": "21.1.1",
-    "@nx/js": "21.1.1",
-    "@nx/node": "21.1.1",
-    "@nx/playwright": "21.1.1",
-    "@nx/vite": "21.1.1",
-    "@nx/web": "21.1.1",
-    "@nx/webpack": "21.1.1",
-    "@nx/workspace": "21.1.1",
+    "@nx/angular": "21.5.2",
+    "@nx/devkit": "21.5.2",
+    "@nx/eslint": "21.5.2",
+    "@nx/eslint-plugin": "21.5.2",
+    "@nx/jest": "21.5.2",
+    "@nx/js": "21.5.2",
+    "@nx/node": "21.5.2",
+    "@nx/playwright": "21.5.2",
+    "@nx/vite": "21.5.2",
+    "@nx/web": "21.5.2",
+    "@nx/webpack": "21.5.2",
+    "@nx/workspace": "21.5.2",
     "@playwright/test": "^1.36.0",
-    "@schematics/angular": "~19.2.0",
+    "@schematics/angular": "20.2.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "30.0.0",
     "@types/node": "18.16.9",
-    "@typescript-eslint/utils": "^8.19.0",
+    "@typescript-eslint/utils": "^8.33.1",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
-    "angular-eslint": "^19.2.0",
+    "angular-eslint": "20.2.0",
     "browser-sync": "^3.0.0",
-    "eslint": "^9.8.0",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-playwright": "^1.6.2",
-    "jest": "^29.7.0",
+    "jest": "30.0.5",
     "jest-environment-node": "^29.7.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
-    "nx": "21.1.1",
+    "nx": "21.5.2",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "29.4.1",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0",
-    "vite": "^6.0.0",
+    "typescript": "5.9.2",
+    "typescript-eslint": "^8.33.1",
+    "vite": "7.1.5",
     "vitest": "^3.0.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "jest-util": "30.0.5"
   }
 }
