--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,23 +1,40 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  // VSCode debug profiles for NestJS backend
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Attach by Process ID",
-      "processId": "${command:PickProcess}",
-      "request": "attach",
-      "skipFiles": ["<node_internals>/**"],
-      "type": "node"
-    },
-    {
+      "name": "NestJS: Debug (ts-node)",
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
+      "cwd": "${workspaceFolder}",
+      "program": "${workspaceFolder}/backend/devswhorun-api/src/main.ts",
+      "runtimeArgs": [
+        "-r",
+        "ts-node/register/transpile-only",
+        "-r",
+        "tsconfig-paths/register"
+      ],
+      "env": {
+        "NODE_ENV": "development",
+        "TS_NODE_PROJECT": "${workspaceFolder}/backend/devswhorun-api/tsconfig.app.json"
+      },
+      "envFile": "${workspaceFolder}/.env",
+      "console": "integratedTerminal",
       "skipFiles": ["<node_internals>/**"],
-      "program": "${workspaceFolder}/apps/backend/devswhorun/src/controllers/auth.controller.ts",
-      "outFiles": ["${workspaceFolder}/**/*.js"]
+      "sourceMaps": true
+    },
+    {
+      "name": "NestJS: Debug (dist)",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "program": "${workspaceFolder}/dist/backend/devswhorun-api/main.js",
+      "outFiles": [
+        "${workspaceFolder}/dist/backend/devswhorun-api/**/*.js"
+      ],
+      "console": "integratedTerminal",
+      "skipFiles": ["<node_internals>/**"],
+      "sourceMaps": true
     }
   ]
 }
