refactor: migrate events from in-memory storage to Appwrite database with Crud

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ APPWRITE_PROJECT_ID=
 APPWRITE_PROJECT_NAME=
 APPWRITE_ENDPOINT=
 APPWRITE_API_KEY=
+APPWRITE_DATABASE_ID=
+APPWRITE_EVENTS_COLLECTION_ID=
+
 # Server Configuration
 PORT=3001
 NODE_ENV=development
