--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ APPWRITE_ENDPOINT=
 APPWRITE_API_KEY=
 APPWRITE_DATABASE_ID=
 APPWRITE_EVENTS_COLLECTION_ID=
+APPWRITE_USERS_COLLECTION_ID=
 
 # Server Configuration
 PORT=3001
